--- a/client/love.jade
+++ b/client/love.jade
@@ -28,10 +28,10 @@ template(name='love')
                 input.add_author(type='text' placeholder='...')
             
             if can_submit
-                .ui.button.submit
+                .ui.basic.button.submit
                     |submit
             else
-                .ui.button.submit
+                .ui.basic.button.submit
                     i.send.icon
                     |submit
         .sixteen.wide.center.aligned.column
@@ -41,7 +41,7 @@ template(name='love')
             // i.large.thumbs.up.icon
             if picked_tags
                 // if many_tags
-                //     a#clear_tags.ui.black.invert.icon.compact.button.pick_term
+                //     a#clear_tags.ui.black.invert.icon.compact.basic.button.pick_term
                 //         i.remove.icon
                 each picked_tags
                     +love_unpick_tag
@@ -56,73 +56,73 @@ template(name='love')
                     if l_results.count
                         .ui.inline.big.header l
                     each picked_l
-                        a.unpick_l.ui.black.large.compact.button(href='#')
+                        a.unpick_l.ui.black.large.compact.basic.button(href='#')
                             strong #{this}
                     each l_results
                         if name
-                            .ui.tiny.compact.button.pick_l #{name}
+                            .ui.tiny.compact.basic.button.pick_l #{name}
                 .center.aligned.column
                     if o_results.count
                         .ui.inline.big.header o
                     each picked_o
-                        a.unpick_o.ui.black.large.compact.button(href='#')
+                        a.unpick_o.ui.black.large.compact.basic.button(href='#')
                             strong #{this}
                     each o_results
                         if name
-                            .ui.tiny.compact.button.pick_o #{name}
+                            .ui.tiny.compact.basic.button.pick_o #{name}
                 .center.aligned.column
                     if v_results.count
                         .ui.inline.big.header v
                     each picked_v
-                        a.unpick_v.ui.black.large.compact.button(href='#')
+                        a.unpick_v.ui.black.large.compact.basic.button(href='#')
                             strong #{this}
                     each v_results
                         if name
-                            .ui.tiny.compact.button.pick_v #{name}
+                            .ui.tiny.compact.basic.button.pick_v #{name}
                 .center.aligned.column
                     if e_results.count
                         .ui.inline.big.header e
                     each picked_e
-                        a.unpick_e.ui.black.large.compact.button(href='#')
+                        a.unpick_e.ui.black.large.compact.basic.button(href='#')
                             strong #{this}
                     each e_results
                         if name
-                            .ui.tiny.compact.button.pick_e #{name}
+                            .ui.tiny.compact.basic.button.pick_e #{name}
                 .center.aligned.column
                     if location_results.count
                         i.big.marker.icon
                     each picked_locations
-                        a.unpick_location.ui.black.large.compact.button(href='#')
+                        a.unpick_location.ui.black.large.compact.basic.button(href='#')
                             strong #{this}
                     each location_results
                         if name
-                            .ui.tiny.compact.button.pick_location #{name}
+                            .ui.tiny.compact.basic.button.pick_location #{name}
                 .center.aligned.column
                     if author_results.count
                         i.big.user.icon
                     each picked_authors
-                        a.unpick_author.ui.black.large.compact.button(href='#')
+                        a.unpick_author.ui.black.large.compact.basic.button(href='#')
                             strong #{this}
                     each author_results
                         if name
-                            .ui.tiny.compact.button.pick_author #{name}
+                            .ui.tiny.compact.basic.button.pick_author #{name}
                 .center.aligned.column
                     if time_results.count
                         i.clock.big.icon
                     each picked_times
-                        a.unpick_time.ui.large.large.compact.button(href='#')
+                        a.unpick_time.ui.large.large.compact.basic.button(href='#')
                             strong #{this}
                     each time_results
-                        .ui.tiny.compact.button.pick_time #{name}
+                        .ui.tiny.compact.basic.button.pick_time #{name}
             .ui.divider
             .ui.stackable.four.column.centered.grid.scrolling
                 each expressions
                     .center.aligned.column
                         .content 
-                            .ui.tertiary.large.button.pick_l #{l_value}
-                            .ui.tertiary.large.button.pick_o #{o_value}
-                            .ui.tertiary.large.button.pick_v #{v_value}
-                            .ui.tertiary.large.button.pick_e #{e_value}
+                            .ui.tertiary.large.basic.button.pick_l #{l_value}
+                            .ui.tertiary.large.basic.button.pick_o #{o_value}
+                            .ui.tertiary.large.basic.button.pick_v #{v_value}
+                            .ui.tertiary.large.basic.button.pick_e #{e_value}
                             div
                             i.thumbs.up.link.outline.icon.upvote
                             |#{points}
@@ -133,16 +133,16 @@ template(name='love')
                             //     input.add_tag(type='text' placeholder='+')
                             // each tags
                             //     +flat_love_tag_picker
-                                // .ui.small.compact.button.pick_flat_tag #{this}
+                                // .ui.small.compact.basic.button.pick_flat_tag #{this}
                             // each timestamp_tags
-                            //     .ui.small.compact.button.pick_flat_time #{this}
+                            //     .ui.small.compact.basic.button.pick_flat_time #{this}
                             if location
                                 i.grey.marker.icon
                                 |#{location}
                             if author
                                 i.grey.user.outline.icon
                                 |#{author}
-                            a.ui.icon.compact.button(href="/love/#{_id}/view")
+                            a.ui.icon.compact.basic.button(href="/love/#{_id}/view")
                                 i.chevron.right.icon
                                 
                                 
@@ -150,7 +150,7 @@ template(name='love')
                                 
 template(name='love_tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    .ui.compact.tertiary.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    .ui.compact.tertiary.basic.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.avatar.image.superzoom(src=term.watson.metadata.image )    
@@ -159,7 +159,7 @@ template(name='love_tag_picker')
         //     small #{count}
         
 template(name='love_unpick_tag')
-    a.love_unpick_tag.ui.large.black.compact.button(href='#')
+    a.love_unpick_tag.ui.large.black.compact.basic.button(href='#')
         if term
             if term.watson.metadata.image
                 img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
@@ -169,7 +169,7 @@ template(name='love_unpick_tag')
         
 template(name='flat_love_tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    .ui.compact.tiny.button.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    .ui.compact.tiny.basic.button.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         // if term
         //     if term.watson.metadata.image
         //         img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
@@ -182,7 +182,7 @@ template(name='love_view')
             .row 
                 .four.wide.column
                     .ui.segmen
-                        a.ui.large.icon.button(href="/")
+                        a.ui.large.icon.basic.button(href="/")
                             i.chevron.left.icon
                         .ui.large.inline.header
                             each tags
