--- a/client/post.jade
+++ b/client/post.jade
@@ -3,7 +3,7 @@ template(name='post_view')
         .ui.stackable.grid
             .row 
                 .twelve.wide.column
-                    a.ui.large.circular.icon.basic.button(href="/")
+                    a.ui.large.icon.button(href="/")
                         i.chevron.left.icon
                     // a.ui.large.button(href="/g/#{group}")
                     //     i.chevron.left.icon
@@ -122,21 +122,21 @@ template(name='post_view')
     
                         +array_edit key='time_tags' label='time tags' icon='clock' direct=true
                         +array_edit key='location_tags' label='location tags' icon='marker' direct=true
-                        a.ui.basic.fluid.button(href=data.url target="_window" title=data.url) 
+                        a.ui.fluid.button(href=data.url target="_window" title=data.url) 
                             i.external.icon
                             |url
-                        .ui.large.basic.label
+                        .ui.large.label
                             | #{data.domain}
                         unless data.is_reddit_media_domain    
                             if data.thumbnail
                                 img.ui.fluid.rounded.image.pointer.call_thumbnail.zoomer(src=data.thumbnail)
                         // .ui.header #{data.domain}
-                        a.ui.basic.button(href="https://www.reddit.com#{data.permalink}" target="_window") 
+                        a.ui.button(href="https://www.reddit.com#{data.permalink}" target="_window") 
                             i.external.grey.icon
                             |r/#{data.subreddit}
                         .spacer
-                        // a.ui.basic.button(href="https://www.reddit.com/user/#{author}" target='_window')
-                        a.ui.basic.button.goto_ruser(href="/user/#{data.author}")
+                        // a.ui.button(href="https://www.reddit.com/user/#{author}" target='_window')
+                        a.ui.button.goto_ruser(href="/user/#{data.author}")
                             i.user.outline.icon
                             |#{data.author}
                         +call_watson id=_id key='data.url' durl=data.url mode='url'
@@ -146,14 +146,14 @@ template(name='post_view')
                             +doc_emotion
                             // unless tone
                             //     +call_tone    
-                        // a.ui.large.basic.label(href=data.url target='_window')
+                        // a.ui.large.label(href=data.url target='_window')
                         //     | #{data.url}
                         if in_dev
                             .ui.small.header reddit_id #{data.reddit_id}
-                        .ui.basic.label
+                        .ui.label
                             i.comment.outline.icon
                             |#{data.comment_count}
-                        .ui.basic.label
+                        .ui.label
                             i.thumbs.up.outline.icon
                             |#{data.ups}
                         |{{to_percent data.upvote_ratio}}%
@@ -161,7 +161,7 @@ template(name='post_view')
                         |#{tags.length}
                         each tags
                             +flat_tag_picker
-                    .ui.basic.button.get_post permalink #{permalink}
+                    .ui.button.get_post permalink #{permalink}
                     .ui.label #{data.ups}
                         
                 // .twelve.wide.column.scrolling
@@ -219,7 +219,7 @@ template(name='rcomment')
             .actions
                 each tags 
                     +flat_tag_picker
-                    // .ui.tiny.basic.label #/{this}
+                    // .ui.tiny.label #/{this}
         if data.replies.data.children
             .ui.grid
                 each data.replies.data.children
@@ -250,10 +250,10 @@ template(name='post_related')
                         img.ui.rounded.small.inline.image(src=data.thumbnail)    
             
                 .ui.inline.small.header !{data.title} #{data.link_title}
-                .ui.basic.label #{data.ups}
+                .ui.label #{data.ups}
                 .ui.label #{subreddit}
                 each tags
-                    .ui.mini.basic.label #{this}        
+                    .ui.mini.label #{this}        
                     
 template(name='related_questions')
     .ui.header related questions
@@ -271,7 +271,7 @@ template(name='related_questions')
                         img.ui.rounded.small.inline.image(src=data.thumbnail)    
             
                 .ui.inline.small.header !{title}
-                .ui.basic.label #{score}
+                .ui.label #{score}
                 .ui.label #{site}
                 each tags
-                    .ui.mini.basic.label #{this}
+                    .ui.mini.label #{this}
