--- a/parts/group_post.jade
+++ b/parts/group_post.jade
@@ -64,6 +64,12 @@ template(name='group_post_view')
                                 +watson_full
                 .four.wide.column.scrolling
                     .ui.segmen
+                        if private
+                            i.large.lock.icon
+                            |private
+                        else
+                            i.large.users.icon
+                            |public
                         +voting_full
                         // div
                         // .ui.inline.grey.header {{from_now start_datetime}}
@@ -115,6 +121,8 @@ template(name='group_post_edit')
                     +array_edit key='time_tags' label='time tags' icon='clock' direct=true
                     +array_edit key='location_tags' label='location tags' icon='marker' direct=true
                     +raw_edit key='raw' label='raw' direct=true
+                    +boolean_edit key='private' label='private' direct=true
+                    +text_edit key='group' label='group' direct=true
                 .twelve.wide.column.scrolling
                     +text_edit key='title' label='title' direct=true
                     +html_edit key='content' label='content' direct=true
