--- a/parts/profile/profile.jade
+++ b/parts/profile/profile.jade
@@ -1,46 +1,35 @@
 template(name='profile_layout')
     +nav
     .ui.bottom.attached.pushable.segment
-        +right_sidebar
         #main_area.global_container.pusher
             with user
                 .ui.stackable.padded.grid
                     .four.wide.column
                         span.mobile.only
                             a(href="/u/#{username}/")
-                                img.ui.centered.tiny.inline.spaced.circular.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}")
+                                img.ui.centered.tiny.inline.spaced.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}")
                         span.mobile.hidden
                             a(href="/u/#{username}/")
-                                img.ui.centered.fluid.circular.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}") 
+                                img.ui.centered.fluid.image(src="{{c.url profile_image_id height=500 width=500 gravity='face' crop='fill'}}") 
                         a.ui.header.refresh_user_stats(href="/u/#{username}") 
                             |#{name}
                         // div
                         a.ui.small.header.refresh_user_stats(href="/u/#{username}") 
                             |@#{username}
                         if is_admin
-                            a.ui.basic.circular.button(href="/u/#{username}/edit" title='admin edit account')
+                            a.ui.basic.button(href="/u/#{username}/edit" title='admin edit account')
                                 i.shield.large.icon
                                 |account
                         if is_current_user
-                            a.ui.basic.circular.button(href="/u/#{username}/edit" title='edit your account')
+                            a.ui.basic.button(href="/u/#{username}/edit" title='edit your account')
                                 i.cog.icon
                                 |account
-                            a.ui.basic.circular.button.logout(href="#" title='log out')
+                            a.ui.basic.button.logout(href="#" title='log out')
                                 i.sign.out.icon
                                 |log out
                         .ui.inline.header() #{points}pts
                         .ui.basic.label {{to_percent one_ratio}}% ratio
                         .ui.basic.label #{flow_volume} volume
-                        .ui.small.header 
-                            label goto/create group
-                        .ui.input
-                            input.goto_group(type='text' placeholder='name')
-                        each group_bookmarks
-                            a.ui.basic.label(href="/g/#{name}")
-                                i.remove.icon
-                                |#{name}
-                        //- .ui.icon.button.refresh_user_stats(title='refresh stats')
-                        //-     i.refresh.icon
                         if is_dev
                             .ui.small.inline.header #{_id}
 
@@ -110,6 +99,17 @@ template(name='user_dashboard')
     .ui.stackable.grid
         .row
             .sixteen.wide.column
+                .ui.small.header 
+                    label goto/create group
+                .ui.input
+                    input.goto_group(type='text' placeholder='name')
+                each group_bookmarks
+                    a.ui.basic.big.label(href="/g/#{name}")
+                        i.remove.icon
+                        |#{name}
+                //- .ui.icon.button.refresh_user_stats(title='refresh stats')
+                //-     i.refresh.icon
+            
                 .ui.header 
                     i.chat.icon
                     |comments
