--- a/client/post.jade
+++ b/client/post.jade
@@ -1,5 +1,5 @@
 template(name='post_view')
-    with doc_by_id
+    with current_doc
         .ui.stackable.grid
             .row 
                 .twelve.wide.column
