--- a/client/love.jade
+++ b/client/love.jade
@@ -5,124 +5,126 @@ template(name='love')
             //     i.heart.icon
             //     |love
             .ui.labeled.large.input
-                .ui.big.label l
+                .ui.big.basic.label l
                 input.add_l(type='text' placeholder='...')
             .ui.labeled.large.input
-                .ui.big.label o
+                .ui.big.basic.label o
                 input.add_o(type='text' placeholder='...')
             .ui.labeled.large.input
-                .ui.big.label v
+                .ui.big.basic.label v
                 input.add_v(type='text' placeholder='...')
             .ui.labeled.large.input
-                .ui.big.label e
+                .ui.big.basic.label e
                 input.add_e(type='text' placeholder='...')
             .ui.labeled.input
-                .ui.large.label 
+                .ui.large.basic.label 
                     i.marker.grey.icon
                     |location
                 input.add_location(type='text' placeholder='...')
             .ui.labeled.input
-                .ui.large.label 
+                .ui.large.basic.label 
                     i.outline.user.grey.icon
                     |author
                 input.add_author(type='text' placeholder='...')
             
             if can_submit
-                .ui.basic.button.submit
+                .ui.basic.circular.button.submit
                     |submit
             else
-                .ui.basic.button.submit
+                .ui.basic.circular.button.submit
                     i.send.icon
                     |submit
         .sixteen.wide.center.aligned.column
-            .ui.inline.header 
-                |#{expressions.count}
-            // i.large.clock.icon
-            // i.large.thumbs.up.icon
-            if picked_tags
-                // if many_tags
-                //     a#clear_tags.ui.black.invert.icon.compact.basic.button.pick_term
-                //         i.remove.icon
-                each picked_tags
-                    +love_unpick_tag
-            // .ui.icon.input
-            //     i.search.icon
-            //     input.search_group_tag(type='text' value=group_query)
-            each result_tags
-                // .ui.label #{this}
-                +love_tag_picker
-            .ui.stackable.four.column.centered.grid
+            .ui.stackable.four.column.centered.grid.scrolling
                 .center.aligned.column
                     if l_results.count
                         .ui.inline.big.header l
                     each picked_l
-                        a.unpick_l.ui.black.large.compact.basic.button(href='#')
+                        a.unpick_l.no_blink.ui.red.large.compact.basic.circular.button(href='#')
                             strong #{this}
                     each l_results
                         if name
-                            .ui.tiny.compact.basic.button.pick_l #{name}
+                            .ui.small.compact.basic.circular.button.pick_l #{name}
                 .center.aligned.column
                     if o_results.count
                         .ui.inline.big.header o
                     each picked_o
-                        a.unpick_o.ui.black.large.compact.basic.button(href='#')
+                        a.unpick_o.no_blink.ui.black.large.compact.basic.circular.button(href='#')
                             strong #{this}
                     each o_results
                         if name
-                            .ui.tiny.compact.basic.button.pick_o #{name}
+                            .ui.small.compact.basic.circular.button.pick_o #{name}
                 .center.aligned.column
                     if v_results.count
                         .ui.inline.big.header v
                     each picked_v
-                        a.unpick_v.ui.black.large.compact.basic.button(href='#')
+                        a.unpick_v.no_blink.ui.red.large.compact.basic.circular.button(href='#')
                             strong #{this}
                     each v_results
                         if name
-                            .ui.tiny.compact.basic.button.pick_v #{name}
+                            .ui.small.compact.basic.circular.button.pick_v #{name}
                 .center.aligned.column
                     if e_results.count
                         .ui.inline.big.header e
                     each picked_e
-                        a.unpick_e.ui.black.large.compact.basic.button(href='#')
+                        a.unpick_e.no_blink.ui.red.large.compact.basic.circular.button(href='#')
                             strong #{this}
                     each e_results
                         if name
-                            .ui.tiny.compact.basic.button.pick_e #{name}
+                            .ui.small.compact.basic.circular.button.pick_e #{name}
                 .center.aligned.column
                     if location_results.count
                         i.big.marker.icon
                     each picked_locations
-                        a.unpick_location.ui.black.large.compact.basic.button(href='#')
+                        a.unpick_location.ui.red.large.compact.basic.circular.button(href='#')
                             strong #{this}
                     each location_results
                         if name
-                            .ui.tiny.compact.basic.button.pick_location #{name}
+                            .ui.tiny.compact.basic.circular.button.pick_location #{name}
                 .center.aligned.column
                     if author_results.count
                         i.big.user.icon
                     each picked_authors
-                        a.unpick_author.ui.black.large.compact.basic.button(href='#')
+                        a.unpick_author.ui.red.large.compact.basic.circular.button(href='#')
                             strong #{this}
                     each author_results
                         if name
-                            .ui.tiny.compact.basic.button.pick_author #{name}
+                            .ui.tiny.compact.basic.circular.button.pick_author #{name}
                 .center.aligned.column
                     if time_results.count
                         i.clock.big.icon
                     each picked_times
-                        a.unpick_time.ui.large.large.compact.basic.button(href='#')
+                        a.unpick_time.ui.large.large.compact.basic.circular.button(href='#')
                             strong #{this}
                     each time_results
-                        .ui.tiny.compact.basic.button.pick_time #{name}
-            .ui.divider
+                        .ui.tiny.compact.basic.circular.button.pick_time #{name}
+                .center.aligned.column
+                    .ui.inline.header 
+                        |#{expressions.count}
+                    // i.large.clock.icon
+                    // i.large.thumbs.up.icon
+                    if picked_tags
+                        // if many_tags
+                        //     a#clear_tags.ui.red.invert.icon.compact.basic.circular.button.pick_term
+                        //         i.remove.icon
+                        each picked_tags
+                            +love_unpick_tag
+                    // .ui.icon.input
+                    //     i.search.icon
+                    //     input.search_group_tag(type='text' value=group_query)
+                    each result_tags
+                        // .ui.label #{this}
+                        +love_tag_picker
+        .ui.divider
+        .sixteen.wide.column
             .ui.stackable.four.column.centered.grid.scrolling
                 each expressions
                     .center.aligned.column
                         .content 
-                            .ui.tertiary.large.basic.button.pick_l #{l_value}
-                            .ui.tertiary.large.basic.button.pick_o #{o_value}
-                            .ui.tertiary.large.basic.button.pick_v #{v_value}
-                            .ui.tertiary.large.basic.button.pick_e #{e_value}
+                            .ui.tertiary.large.basic.circular.button.pick_l #{l_value}
+                            .ui.tertiary.large.basic.circular.button.pick_o #{o_value}
+                            .ui.tertiary.large.basic.circular.button.pick_v #{v_value}
+                            .ui.tertiary.large.basic.circular.button.pick_e #{e_value}
                             div
                             i.thumbs.up.link.outline.icon.upvote
                             |#{points}
@@ -133,24 +135,24 @@ template(name='love')
                             //     input.add_tag(type='text' placeholder='+')
                             // each tags
                             //     +flat_love_tag_picker
-                                // .ui.small.compact.basic.button.pick_flat_tag #{this}
+                                // .ui.small.compact.basic.circular.button.pick_flat_tag #{this}
                             // each timestamp_tags
-                            //     .ui.small.compact.basic.button.pick_flat_time #{this}
+                            //     .ui.small.compact.basic.circular.button.pick_flat_time #{this}
                             if location
                                 i.grey.marker.icon
                                 |#{location}
                             if author
                                 i.grey.user.outline.icon
                                 |#{author}
-                            a.ui.icon.compact.basic.button(href="/love/#{_id}/view")
+                            a.ui.icon.compact.basic.circular.button(href="/love/#{_id}/view")
                                 i.chevron.right.icon
-                                
+                                    
                                 
                                 
                                 
 template(name='love_tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    .ui.compact.tertiary.basic.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    .ui.compact.tertiary.basic.circular.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.avatar.image.superzoom(src=term.watson.metadata.image )    
@@ -159,7 +161,7 @@ template(name='love_tag_picker')
         //     small #{count}
         
 template(name='love_unpick_tag')
-    a.love_unpick_tag.ui.large.black.compact.basic.button(href='#')
+    a.love_unpick_tag.ui.large.red.compact.basic.circular.button(href='#')
         if term
             if term.watson.metadata.image
                 img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
@@ -169,7 +171,7 @@ template(name='love_unpick_tag')
         
 template(name='flat_love_tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    .ui.compact.tiny.basic.button.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    .ui.compact.tiny.basic.circular.button.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         // if term
         //     if term.watson.metadata.image
         //         img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
@@ -177,20 +179,17 @@ template(name='flat_love_tag_picker')
         // if in_dev
         //     small #{count}
 template(name='love_view')
-    with doc_by_id
+    with current_doc
         .ui.stackable.grid
             .row 
                 .four.wide.column
                     .ui.segmen
-                        a.ui.large.icon.basic.button(href="/")
-                            i.chevron.left.icon
+                        a.ui.large.icon.basic.circular.button(href="/love")
+                            i.chevron.left.big.icon
+                            
                         .ui.large.inline.header
                             each tags
                                 .ui.label #{this}
-                        .ui.header #{l_value}
-                        .ui.header #{o_value}
-                        .ui.header #{v_value}
-                        .ui.header #{e_value}
                         // div
                         // .ui.inline.grey.header {{from_now start_datetime}}
                         
@@ -204,7 +203,11 @@ template(name='love_view')
     
                         +array_edit key='time_tags' label='time tags' icon='clock' direct=true
                         +array_edit key='location_tags' label='location tags' icon='marker' direct=true
-                .twelve.wide.column.scrolling
+                .eight.wide.column.scrolling
+                    .ui.big.header #{l_value}
+                    .ui.big.header #{o_value}
+                    .ui.big.header #{v_value}
+                    .ui.big.header #{e_value}
                     if image_link
                         a(href="/#{group}")
                             +image_link_view key='image_link' direct=true
@@ -221,5 +224,10 @@ template(name='love_view')
                     .spacer
                     .spacer
                     +comments
-                    if watson
-                        +watson_view
+                .four.wide.column
+                    .ui.header viewed by
+                    .ui.header tip
+                    .ui.header anon vote
+                    .ui.header user vote
+                    .ui.header related links
+                    .ui.button.search_dao search in dao
