--- a/parts/group.jade
+++ b/parts/group.jade
@@ -195,7 +195,7 @@ template(name='group')
                 
 template(name='group_tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    a.ui.tertiary.button.zoomer.pick_tag.profile_nav_item(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    a.ui.tertiary.button.zoomer.pick_tag.no_blink(title="#{count} results" class="#{picker_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.avatar.image.superzoom(src=term.watson.metadata.image )    
@@ -204,7 +204,7 @@ template(name='group_tag_picker')
         //     small #{count}
         
 template(name='group_unpick_tag')
-    a.group_unpick_tag.ui.black.image.large.label.profile_nav_item(href='#')
+    a.group_unpick_tag.ui.black.image.large.label.no_blink(href='#')
         if term
             if term.watson.metadata.image
                 img.ui.avatar.compact.image.superzoom(src=term.watson.metadata.image)    
@@ -214,7 +214,7 @@ template(name='group_unpick_tag')
         
 template(name='group_flat_tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    a.ui.link.image.basic.label.zoomer.pick_flat_tag.profile_nav_item(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    a.ui.link.image.basic.label.zoomer.pick_flat_tag.no_blink(title="#{count} results" class="#{picker_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
